--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,8 +1,4 @@
-font_family      FiraCode Nerd Font Mono
-bold_font        auto
-italic_font      auto
-bold_italic_font auto
-font_size 13.0
+font_size 16.0
 
 enable_audio_bell no
 visual_bell_duration 0.5
@@ -12,6 +8,7 @@ bell_on_tab "🔔 "
 tab_bar_edge top
 tab_bar_style slant
 
+cursor_shape block
 
 # vim:ft=kitty
 
@@ -20,8 +17,6 @@ tab_bar_style slant
 ## license:  MIT
 ## upstream: https://github.com/catppuccin/kitty/blob/main/themes/mocha.conf
 ## blurb:    Soothing pastel theme for the high-spirited!
-
-
 
 # The basic colors
 foreground              #cdd6f4
@@ -94,3 +89,10 @@ color14 #94e2d5
 color7  #bac2de
 color15 #a6adc8
 
+
+
+# BEGIN_KITTY_FONTS
+font_family      family="JetBrainsMono Nerd Font Mono"
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
